# noggin

./: .cico.pipeline  .coveragerc  .gitignore  .gitleaks.toml  .license_strategy.ini  .mergify.yml  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yml  .rstcheck.cfg  .travis.yml  Dockerfile  Jenkinsfile  LICENSE  README.md  Vagrantfile  data-uri-to-svg.py  noggin.cfg.default  noggin.cfg.example  pyproject.toml  securitas.cfg.default  sonar-project.properties  tox.ini
.containerdev-public/: Dockerfile  runargs
.dependabot/: config.yml
.github/: dependabot.yml  renovate.json
.github/workflows/: dependabot-approve.yml  main.yml  notifications.yml  stale.yml  tests.yml
.s2i/: environment
deployment/: nginx.conf  noggin.cfg.example  noggin.service  noggin.sysconfig
deployment/scripts/: sar.py
devel/: create-test-data.py  rebuild-cassettes.sh  run-liccheck.sh
devel/ansible/: freeipa.yml  noggin.yml  playbook.yml  vars.yml
docs/: api.rst  conf.py  contributing.rst  fas2_noggin.rst  index.rst  installation.rst  release_notes.md  release_notes.rst  requirements-rtd.txt  userguide.rst
docs/installation/: 01-freeipa-server.rst  02-freeipa-client.rst
news/: +freeipa_servers.feature  +popovers.bug  1079.bug  1152.feature  1202.bug  1210.bug  1216.feature  1240.feature  1327.feature  1350.bug  1356.bug  1357.feature  1363.bug  1379.bug  1391.other  1415.feature  1430.bug  1447.feature  1c2205f.docs  248.feature  309.feature  422.feature  556.feature  560.bug  568.feature  572.feature  573.bug  574.bug  576.feature  577.bug  580.feature  592.feature  593.bug  599.feature  600.bug  610.feature  646.feature  658.bug  676.feature  678.bug  (+34 more)
noggin/: __init__.py  app.py  defaults.cfg  defaults.py  l10n.py  middleware.py  signals.py
noggin/controller/: __init__.py  authentication.py  group.py  password.py  registration.py  root.py  user.py
noggin/form/: add_group_member.py  base.py  edit_user.py  group.py  login_user.py  password_reset.py  register_user.py  remove_group_member.py  sync_token.py  validators.py
noggin/po/: messages.pot
noggin/po/fr/LC_MESSAGES/: messages.po
noggin/representation/: __init__.py  agreement.py  base.py  group.py  otptoken.py  user.py
noggin/security/: ipa.py  ipa_admin.py
noggin/static/css/: main.css
noggin/static/js/: search.js
noggin/templates/: 404.html  _form_macros.html  _login_form.html  _pagination.html  _password_reset_form.html  _register_form.html  _user-agreements.html  base.html  forgot-password-ask.html  forgot-password-change.html  group.html  groups.html  index.html  ipa_error.html  login.html  master.html  password-reset.html  register.html  registering.html  registration-activation.html  registration-confirmation.html  registration-spamcheck-wait.html  spamcheck.html  sync-token.html  user-settings-agreements.html  user-settings-email-validation.html  user-settings-email.html  user-settings-keys.html  user-settings-otp.html  user-settings-password.html  user-settings-profile.html  user-settings.html  user.html
noggin/tests/unit/: __init__.py  conftest.py  noggin.cfg  test_app.py  test_middleware.py  test_signals.py  test_themes.py  utilities.py
noggin/tests/unit/cassettes/: ipa_testing_config.yaml
noggin/tests/unit/controller/: test_authentication.py  test_forgot_password.py  test_group.py  test_password_reset.py  test_registration.py  test_root.py  test_user.py  test_user_otp.py
noggin/tests/unit/form/: test_base.py  test_edit_user.py
noggin/tests/unit/representation/: conftest.py  test___init__.py  test_agreement.py  test_base.py  test_group.py  test_user.py
noggin/tests/unit/security/: test_ipa.py  test_ipa_admin.py
noggin/tests/unit/translations/: test_translations.py
noggin/tests/unit/utility/: test___init__.py  test_controllers.py  test_forms.py  test_locales.py  test_messaging.py  test_pagination.py  test_password_reset.py  test_templates.py
noggin/themes/: __init__.py
noggin/themes/almalinux/templates/: email-validation.html  email-validation.txt  forgot-password-email.html  forgot-password-email.txt  main.html  settings-email-validation.html  settings-email-validation.txt
noggin/translations/: messages.pot
noggin/utility/: __init__.py  controllers.py  forms.py  locales.py  messaging.py  pagination.py  password_reset.py  templates.py  timezones.py  token.py
packit/installation/: main.fmf
securitas/: __init__.py  app.py  defaults.cfg  ipa.py  utility.py
securitas/controller/: authentication.py  group.py  password.py  registration.py  root.py  user.py
securitas/form/: add_group_member.py  disable_user.py  edit_user.py  password_reset.py  register_user.py  remove_group_member.py
securitas/representation/: __init__.py  group.py  user.py
securitas/security/: ipa.py  ipa_admin.py
securitas/static/css/: main.css
securitas/templates/: 404.html  _form_macros.html  _login_form.html  _register_form.html  forgot-password-ask.html  forgot-password-change.html  group.html  groups.html  index.html  login.html  main.html  master.html  password-reset.html  register.html  user-edit.html  user-settings-disable.html  user-settings-keys.html  user-settings-password.html  user-settings.html  user.html  with_navbar.html
securitas/tests/integration/: test_dummy.py
securitas/tests/unit/: conftest.py  securitas.cfg  test_app.py  test_root.py  utilities.py
securitas/utility/: __init__.py  defaults.py  get.py  locales.py  messaging.py  timezones.py
tests/unit/: conftest.py  test_l10n.py  test_middleware.py  utilities.py
tests/unit/cassettes/: ipa_testing_config.yaml
tests/unit/controller/: test_authentication.py  test_forgot_password.py  test_group.py  test_password_reset.py  test_registration.py  test_root.py  test_user.py  test_user_otp.py
tests/unit/form/: test_base.py  test_edit_user.py
tests/unit/representation/: conftest.py  test_agreement.py  test_base.py  test_otptoken.py
tests/unit/security/: test_ipa.py
tests/unit/translations/: test_translations.py
tests/unit/utility/: test_pagination.py  test_password_reset.py  test_templates.py
tools/: create-test-data.py
(+655 files in other folders)
