[tool.poetry]
name = "noggin-aaa"
version = "0.0.1"
description = "Noggin is a self-service portal for FreeIPA. The primary purpose of the portal is to allow users to sign up and manage their account information and group membership."

license = "MIT"

authors = [
  "Fedora Infrastructure <admin@fedoraproject.org>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/fedora-infra/noggin"
homepage = "https://github.com/fedora-infra/noggin"

keywords = ['security']

packages = [
    { include = "noggin" },
]

include = [
    "tox.ini",
    "noggin.cfg.example",
    "babel.cfg",
    "docs/*",
    "docs/*/*",
]

[tool.poetry.dependencies]
python = "^3.6"
cryptography = "^2.9"
flask = "^1.1"
flask-wtf = "^0.14"
python-freeipa = "^1.0.6"
click = "^7.0"
pyjwt = "^1.7.1"
Flask-Mail = "^0.9.1"
gunicorn = {version = "^20.0", optional = true}
fedora-messaging = "^2.0.1"
backoff = "^1.10.0"
noggin-messages = "^0.0.1"
whitenoise = "^5.0.1"
flask-babel = "^1.0.0"
flask-healthz = "^0.0.1"
markupsafe = "^1.1.1"
wtforms = {extras = ["email"], version = "^2.3.3"}
requests = {extras = ["security"], version = "^2.25.1"}
translitcodec = "0.6.0"
unidecode = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-cov = "^2.8"
sphinx = "^3.0"
beautifulsoup4 = "^4.9"
vcrpy = "^4.0"
pytest-vcr = "^1.0"
liccheck = "^0.4.2"
bandit = "^1.6"
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.7"
Faker = "^4.0.3"
pyotp = "^2.3.0"
pytest-mock = "^3.0.0"
isort = "^5.1.4"

[tool.poetry.extras]
deploy = ["gunicorn"]

[tool.black]
skip-string-normalization = true

[tool.towncrier]
package = "noggin"
filename = "docs/release_notes.rst"
directory = "news/"
title_format = "v{version}"
issue_format = "{issue}"
template = "news/_template.rst"
underlines = "=^-"
wrap = true
all_bullets = true

  [[tool.towncrier.type]]
  directory = "bic"
  name = "Backwards Incompatible Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "dependency"
  name = "Dependency Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bug"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "dev"
  name = "Development Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "docs"
  name = "Documentation Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "other"
  name = "Other Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "author"
  name = "Contributors"
  showcontent = true


[tool.liccheck]
authorized_licenses = [
  "bsd",
  "new bsd",
  "simplified bsd",
  "apache",
  "apache 2.0",
  "apache software",
  "gnu lgpl",
  "gpl v2",
  "GNU General Public License v2 or later (GPLv2+)",
  "gpl v3",
  "lgpl with exceptions or zpl",
  "isc",
  "isc license (iscl)",
  "mit",
  "python software foundation",
  "zpl 2.1",
  "mpl-2.0",
  "lgpl",
  "CC0 (copyright waived)"
]

[tool.liccheck.authorized_packages]
noggin-messages = ">=0.0.1"

[tool.isort]
profile = "black"
known_first_party = ["noggin", "noggin_messages"]
lines_after_imports = 2
force_alphabetical_sort_within_sections = true

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
