[tool.poetry]
name = "noggin-aaa"
version = "1.10.0"
description = "Noggin is a self-service portal for FreeIPA. The primary purpose of the portal is to allow users to sign up and manage their account information and group membership."

license = "MIT"

authors = [
  "Fedora Infrastructure <admin@fedoraproject.org>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/fedora-infra/noggin"
homepage = "https://github.com/fedora-infra/noggin"

keywords = ['security']

packages = [
    { include = "noggin" },
]

include = [
    { path = "tox.ini", format = "sdist" },
    { path = "babel.cfg", format = "sdist" },
    { path = "deployment/*", format = "sdist" },
    { path = "docs/*", format = "sdist" },
    { path = "tests/*", format = "sdist" },
]

classifiers = [
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]

[tool.poetry.dependencies]
python = "^3.9.0"
cryptography = ">=3.4.7"
flask = "^2.0.0 || ^3.0.0"
flask-wtf = ">=0.14.3, <2.0.0"
python-freeipa = "^1.0.6"
click = "^8.0"
pyjwt = "^2.1.0"
Flask-Mail = "^0.9.1 || ^0.10.0"
gunicorn = {version = "^20.0 || ^21.0.0 || ^22.0.0 || ^23.0.0", optional = true}
fedora-messaging = ">=2.1.0, <4.0"
backoff = ">=1.6.0, <3.0"
noggin-messages = "^1.1.0"
whitenoise = ">=5.3, <7.0"
flask-babel = "^4.0.0"
flask-healthz = "^1.0.0"
markupsafe = "^1.1.1 || ^2.0.0 || ^3.0.0"
wtforms = {extras = ["email"], version = "^3.0.0"}
requests = {extras = ["security"], version = "^2.25.0"}
translitcodec = "0.7.0"
unidecode = "^1.2.0"
flask-talisman = ">=0.8.1, <2.0"
pyotp = "^2.2.7"
srvlookup = "^2.0.0 || ^3.0.0"
sphinx = {version = ">=4.2", optional = true}
myst-parser = {version = ">=2.0.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.0"
pytest-cov = ">=3.0.0"
beautifulsoup4 = ">=4.9"
vcrpy = ">=5.0"
pytest-vcr = ">=1.0"
liccheck = ">=0.6.4"
bandit = ">=1.6"
black = ">=22.0.0"
flake8 = ">=4.0.1"
Faker = ">=13.0.0"
pytest-mock = ">=3.0.0"
isort = ">=5.1.4"
rstcheck = ">=6.0.0"
typer = "^0.11.0"
pre-commit = ">=2.13.0"
safety = ">=2.2.0"
towncrier = ">=21.3.0"
poetry-plugin-export = "^1.6.0"

[tool.poetry.extras]
deploy = ["gunicorn"]
docs = ["sphinx", "myst-parser"]


[tool.black]
skip-string-normalization = true

[tool.towncrier]
package = "noggin"
filename = "docs/release_notes.md"
directory = "news/"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "news/_template.md"
title_format = "## v{version}"
issue_format = "{issue}"

  [[tool.towncrier.type]]
  directory = "bic"
  name = "Backwards Incompatible Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "dependency"
  name = "Dependency Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bug"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "dev"
  name = "Development Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "docs"
  name = "Documentation Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "other"
  name = "Other Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "author"
  name = "Contributors"
  showcontent = true

[tool.isort]
profile = "black"
known_first_party = ["noggin", "noggin_messages"]
lines_after_imports = 2

[tool.pytest.ini_options]
testpaths = [
    "tests/unit",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
